Modify package name to com.coloros.note and update manifest placeholders

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ ext {
 }
 
 android {
-    namespace "com.termux"
+    namespace "com.coloros.notes"
 
     compileSdkVersion project.properties.compileSdkVersion.toInteger()
     ndkVersion = System.getenv("JITPACK_NDK_VERSION") ?: project.properties.ndkVersion
@@ -41,6 +41,7 @@ android {
     }
 
     defaultConfig {
+        applicationId "com.coloros.notes"
         minSdkVersion project.properties.minSdkVersion.toInteger()
         targetSdkVersion project.properties.targetSdkVersion.toInteger()
         versionCode 118
@@ -51,14 +52,14 @@ android {
 
         buildConfigField "String", "TERMUX_PACKAGE_VARIANT", "\"" + project.ext.packageVariant + "\"" // Used by TermuxApplication class
 
-        manifestPlaceholders.TERMUX_PACKAGE_NAME = "com.termux"
-        manifestPlaceholders.TERMUX_APP_NAME = "Termux"
-        manifestPlaceholders.TERMUX_API_APP_NAME = "Termux:API"
-        manifestPlaceholders.TERMUX_BOOT_APP_NAME = "Termux:Boot"
-        manifestPlaceholders.TERMUX_FLOAT_APP_NAME = "Termux:Float"
-        manifestPlaceholders.TERMUX_STYLING_APP_NAME = "Termux:Styling"
-        manifestPlaceholders.TERMUX_TASKER_APP_NAME = "Termux:Tasker"
-        manifestPlaceholders.TERMUX_WIDGET_APP_NAME = "Termux:Widget"
+        manifestPlaceholders.TERMUX_PACKAGE_NAME = "com.coloros.notes"
+        manifestPlaceholders.TERMUX_APP_NAME = "笔记"
+        manifestPlaceholders.TERMUX_API_APP_NAME = "笔记:API"
+        manifestPlaceholders.TERMUX_BOOT_APP_NAME = "笔记:Boot"
+        manifestPlaceholders.TERMUX_FLOAT_APP_NAME = "笔记:Float"
+        manifestPlaceholders.TERMUX_STYLING_APP_NAME = "笔记:Styling"
+        manifestPlaceholders.TERMUX_TASKER_APP_NAME = "笔记:Tasker"
+        manifestPlaceholders.TERMUX_WIDGET_APP_NAME = "笔记:Widget"
 
         externalNativeBuild {
             ndkBuild {
