--- a/.github/workflows/build-note-apk.yml
+++ b/.github/workflows/build-note-apk.yml
@@ -1,24 +1,34 @@
 name: Build Note Disguise APK
 on:
-  workflow_dispatch: # 仅支持手动触发
+  workflow_dispatch: # 仅手动触发编译
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: gradle
-      - name: Grant execute permission to gradlew
-        run: chmod +x ./gradlew
-      - name: Build APK (skip tests)
-        run: ./gradlew assembleRelease -x test -x validateGradleWrapper
+
+      - name: Fix gradlew permission
+        run: |
+          chmod +x ./gradlew
+          ls -l ./gradlew # 验证执行权限
+
+      - name: Specify Gradle version (fix compatibility)
+        run: ./gradlew wrapper --gradle-version 7.5 --distribution-type all
+
+      - name: Build APK (skip unit tests only)
+        run: ./gradlew assembleRelease -x test --warning-mode all
+
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: note-disguise-apk
           path: app/build/outputs/apk/release/*.apk
+
